# acp-framework

./: .gitignore  AGENTS.md  ANALISIS-ARQ.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SPEC-INDEX.md
.github/: RFC-TEMPLATE.md
.github/workflows/: docker.yml
01-arquitectura-soberana/: Doctrina-Fundacional-ACP.md  Sovereign-AI-Architecture-Framework.md
02-modelo-gat/: ACP-AGS-1.0.md  GAT-Maturity-Model.md  Roadmap.md
02-modelo-gat/matrices/: Niveles-a-Implementacion.csv
03-protocolo-acp/cumplimiento/: ACP-TS-1.0.md
03-protocolo-acp/test-vectors/: TS-CORE-NEG-001-expired-token.json  TS-CORE-NEG-002-missing-expiry.json  TS-CORE-NEG-003-missing-nonce.json  TS-CORE-NEG-004-invalid-signature.json  TS-CORE-NEG-005-revoked-token.json  TS-CORE-NEG-006-untrusted-issuer.json  TS-CORE-POS-001-valid-canonical-capability.json  TS-CORE-POS-002-valid-multiple-actions.json  TS-DCMA-NEG-001-privilege-escalation.json  TS-DCMA-NEG-002-revoked-delegator.json  TS-DCMA-NEG-003-delegation-depth-exceeded.json  (+1 more)
04-analisis-formal/: Adversarial-Analysis.md  Hardening-Sistemico.md  Security-Reduction-EUF-CMA.md
06-publicaciones/: ACP-Whitepaper-v1.0.md  IEEE-NDSS-ACP-1.0.md  IEEE-NDSS-Paper-Structure.md
07-implementacion-referencia/: README.md
07-implementacion-referencia/sdk/python/: pyproject.toml
07-implementacion-referencia/sdk/python/acp/: __init__.py  client.py  identity.py  signer.py
07-implementacion-referencia/sdk/python/examples/: agent_payment.py
07-implementacion-referencia/sdk/python/tests/: test_client.py  test_signer.py
07-implementacion-referencia/sdk/rust/: Cargo.toml
07-implementacion-referencia/sdk/rust/src/: client.rs  error.rs  identity.rs  lib.rs  signer.rs
07-implementacion-referencia/sdk/rust/tests/: client_tests.rs  identity_tests.rs  signer_tests.rs
compliance/: ACP-CERT-1.0.md  ACP-IUT-PROTOCOL-1.0.md  ACP-TS-1.1.md  ACP-TS-SCHEMA-1.0.md  ACR-1.0.md
docs/: admission-flow.md  architecture-overview.md  faq.md  quickstart.md
impl/: README.md  docker-compose.yml
openapi/: acp-api-1.0.yaml
tla/: ACP.cfg  ACP.tla  ACP_Extended.cfg  ACP_Extended.tla  ACP_Extended_2agents.cfg
(+402 files in other folders)
