[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-sdk"
version = "1.0.0"
description = "ACP Python SDK — Agent Control Protocol v1.0 client library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["acp", "agent", "authorization", "capability-token", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0.0",
    "base58>=2.1.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx",    # for testing without a real server
]

[project.urls]
Homepage = "https://github.com/chelof100/acp-framework"
Repository = "https://github.com/chelof100/acp-framework"
Documentation = "https://github.com/chelof100/acp-framework/tree/main/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
